# profiling

./: CMakeLists.txt  main.cpp  readme.md
cmake/: setupCImg.cmake  setupFFTW.cmake  setupGperfTools.cmake
